feat: add a poetic message to the 404 page.

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,6 +13,7 @@ const meta = {
     <h1 class='block text-7xl font-bold sm:text-9xl'>404</h1>
     <p class='mt-3 text-muted-foreground'>Oops, something went wrong.</p>
     <p class='text-lg'>Sorry, we couldn't find your page.</p>
+    <p class='mt-6 text-sm text-muted-foreground/60 italic'>You're just one moon away from the answer.</p>
     <Button title='Back to home' href='/' variant='ahead' class='mt-5' />
   </div>
 </PageLayout>
